--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -1,9 +1,8 @@
-name: Deploy
+name: Deploy Portfolio
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -15,24 +14,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Install
+      - name: Install dependencies
+        working-directory: project
         run: npm install
 
       - name: Build
+        working-directory: project
         run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: project/dist
 
   deploy:
     needs: build
@@ -41,5 +40,4 @@ jobs:
       name: github-pages
 
     steps:
-      - name: Deploy
-        uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
